app/assets/stylesheets/dreams/grid.css.scss
.dream-grid-holder {
  width: 100%;
  margin-top: 30px;
  border: 1px solid lightgrey;

  h3 {
    margin-top: 10px;
  }

  .user-section {
    padding: 30px;
  }

  .dream-section {
    padding: 0px 30px 30px 30px;
  }

  .edit-icon {
    margin-top: 10px;
    font-size: 20px;
  }
}

.dream-icon {
  font-size: 14px;
  color: rgba(0,0,0,0.3);
  margin-top: 10px;
}

.user-name {
  margin-left: 10px;
}

.dream-help-button, .send-connection-button {
  margin-top: 10px;
}

.message-box {
  width: 100%;
  height: 30px;
  padding: 5px;
  margin-bottom: 10px;
}

.private-message {
  margin-bottom: 10px;
}

.owner-of-dream-messages-holder {
  .help-offered-by {
    margin-bottom: 20px;
  }
}

.confirm-buttons {
  height: 40px;
}

.cancel-link {
  cursor: pointer;
  margin-top: 15px;
  margin-left: 10px;
}

.connection-message {
  color: grey;
  font-style: italic;
  font-size: 14px;
  margin-top: 10px;
}

